--- a/container/container.config
+++ b/container/container.config
@@ -23,3 +23,10 @@ process {
         ext.conda = "/opt/fraposa/"
     }
 }
+
+// for GCP environments e.g. all of us
+plugins {
+    id 'nf-schema@2.0.0' // validation of parameters
+    id 'nf-prov@1.2.2' // workflow provenance
+    id 'nf-google@1.15.2' // for All of Us
+}
