--- a/conf/modules.config
+++ b/conf/modules.config
@@ -36,10 +36,10 @@ process {
     // container configuration
     withLabel: pgscatalog_utils {
         ext.conda = "$projectDir/environments/pgscatalog_utils/environment.yml"
-        ext.docker = 'ghcr.io/pgscatalog/pygscatalog'
-        ext.singularity = 'oras://ghcr.io/pgscatalog/pygscatalog'
-        ext.docker_version = ':pgscatalog-utils-1.4.4'
-        ext.singularity_version = ':pgscatalog-utils-1.4.4-singularity'
+        ext.docker = 'ghcr.io/elijah-bradford/pygscatalog_addedhomeref'
+        ext.singularity = 'ghcr.io/elijah-bradford/pygscatalog_addedhomeref'
+        ext.docker_version = ':latest'
+        ext.singularity_version = ':latest'
     }
 
     withLabel: plink2 {
