update container version

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -38,8 +38,8 @@ process {
         ext.conda = "$projectDir/environments/pgscatalog_utils/environment.yml"
         ext.docker = 'ghcr.io/elijah-bradford/pygscatalog_addedhomeref'
         ext.singularity = 'ghcr.io/elijah-bradford/pygscatalog_addedhomeref'
-        ext.docker_version = ':latest'
-        ext.singularity_version = ':latest'
+        ext.docker_version = ':latest-amd64'
+        ext.singularity_version = ':latest-amd64'
     }
 
     withLabel: plink2 {
