--- a/nextflow.config
+++ b/nextflow.config
@@ -208,6 +208,7 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
+    gadi      { includeConfig 'conf/gadi.config'      }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
